added(projets on homepage)

--- a/src/colophon.html
+++ b/src/colophon.html
@@ -41,12 +41,12 @@ title: Colophon of Teotime Pacreau website, how it is made with which technologi
       <main id="colophon">
         <h1>Colophon</h1>
         <p>
-          Ce site léger et sans
+          Ce site <a href="https://1mb.club/">léger</a> et sans
           <a
             href="https://fr.wikipedia.org/wiki/%C3%89conomie_de_la_surveillance"
             >cookies</a
           >
-          ne drainera pas votre <a href="https://1mb.club/">batterie</a>.
+          respecte vos données personnelles.
         </p>
         <p>
           Les 2 polices utilisées sont gratuites et open-source : Inter de
@@ -56,19 +56,19 @@ title: Colophon of Teotime Pacreau website, how it is made with which technologi
         </p>
         <p>
           J'ai construit ce site propulsé par
-          <a class="colophon-link" href="11ty.dev">Eleventy</a>, un générateur
-          de site statique qui offre de la souplesse grâce à sa prise en compte
+          <a class="colophon-link" href="11ty.dev">Eleventy</a>, un moteur
+          de site statique qui associe souplesse et éco-conception numérique grâce à sa prise en compte
           du
           <a
             class="colophon-link"
             href="https://www.arthurperret.fr/cours/markdown.html"
             >Markdown</a
           >
-          et du peu de Javascript requis. Le tout est hébergé sur Netlify.
+          et du peu de dépendances requises.
         </p>
         <p>
           Ce site suit les principes de l'IndieWeb, car j'aime être propriétaire
-          de mon contenu, loin des plateformes sociales vacillantes. Le flux RSS
+          de mon contenu, loin de certaines plateformes sociales vacillantes. Le flux RSS
           étant, à mon sens, l'approche la plus raisonnée pour suivre du contenu
           web, voici celui de ce site
           <a class="rss" href="/feed/feed.xml"><i class="ph ph-rss"></i></a>
