--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -40,7 +40,9 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
       </header>
       <main class="container-cv">
         <button id="download-cv">
-          <a href="/assets/CV_data.pdf" download><i class="ph ph-download">Télécharger mon CV</i></a>
+          <a href="/assets/CV_data.pdf" download>
+            <icon class="ph ph-download"></icon>
+          </a>
         </button>
         <section class="contenu-pro-titre">
           <h1>Expériences professionnelles</h1>
@@ -49,7 +51,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
           <time class="travail-time">2022-2024</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
-            Apprenti en gestion de projet, transversalité et conduite du
+            Apprenti en gestion de projet et conduite du
             changement chez
             <a
               href="https://www.prefectures-regions.gouv.fr/pays-de-la-loire/Region-et-institutions/Organisation-administrative-de-la-region/Secretariat-General-pour-les-Affaires-Regionales-SGAR/Etat-LIN-le-Laboratoire-d-Innovation-Publique-de-l-Etat-en-region-Pays-de-la-Loire/Etat-LIN-qu-est-ce-que-c-est"
@@ -61,20 +63,14 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
           </p>
           <ul class="travail-prose">
             <li>
-              Conduite de projets stratégique de transformation publique.
+              Conduite de projets de transformation publique en mode projet.
             </li>
             <li>
-              Appui à la coordination des projets portés par le laboratoire Etat'Lin : avec une équipe de 5 designer de services, appropriation de la méthode du design de services, design thinking, production d'outils sur mesure...
+              Appui aux services de l’État en Pays de la Loire dans leurs projets de conduite du changement (outillage organisationnel, diagnostic stratégique...).
             </li>
-            <li>Gestion de projet informatique : conduite d'une projet de dématérialisation des enquêtes publiques en mode agile. En lead sur l'AMOA (préparation au développement), développement et hébergement cloud, coordination de l'équipe projet, plan de conduite du changement pour accompagner les utilisateurs.</li>
-            <li>
-              Co-animation de
-              <a
-                href="https://www.prefectures-regions.gouv.fr/pays-de-la-loire/DOCUMENTS-PUBLICATIONS/Articles/Mois-de-l-innovation-publique-premiere-promotion-de-l-incubateur-d-Etat-LIN"
-                >l’incubateur de projets innovants d’Etat’LIN</a
-              >, destiné à promouvoir l’intrapreneuriat au sein de la fonction
-              publique.
-            </li>
+            <li>Coordination et accompagnement de 2 projets de transformation numérique (AMOA, MOE...).</li>
+            <li>Collaboration avec une équipe de designer de 
+              services : appropriation de la méthode design et complémentarité avec le mode projet. </li>
             <li>
               Co-animation du réseau des
               <a
@@ -84,14 +80,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
               (réseau d'essaimage de l'innovation publique, 50 agents).
             </li>
             <li>
-              Appui aux services de l’État en Pays de la Loire dans leurs
-              projets de conduite du changement
-            </li>
-            <li>Conception et facilitation de séminaires pour répondre aux besoins de transformation organisationnels</li>
-            <li>
-              Développement de la transversalité entre les 3 axes de
-              transformation d’Etat’LIN : transformation numérique,
-              transformation managériale et transformation des méthodes
+              Développement de la transversalité avec les services de transformation numérique et managériale
             </li>
           </ul>
           <time class="travail-time">2021-2022</time>
@@ -112,13 +101,12 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
               >(106 espaces de travail, 3 espaces événementiels, 5 salles de
               réunion, 20 espaces de stockage).
             </li>
-            <li>Mise en place d'une communication externe.</li>
+            <li>Coordination des prestataires.</li>
             <li>
               Actions de développement de la commercialisation (objectifs de CA,
               optimisation des activités rentables).
             </li>
             <li>SEO et SEA pour le site internet.</li>
-            <li>Gestion administrative.</li>
           </ul>
           <time class="travail-time">2020-2021</time>
           <div class="hr-parent"><hr /></div>
@@ -133,18 +121,14 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
           </p>
           <ul class="travail-prose">
             <li>
-              Pilotage, suivi et gestion du déploiement de la fibre optique sur
-              le parc de 8000 logements.
+              Gestion du déploiement de la fibre optique sur le parc de 7000 logements.
             </li>
             <li>
-              Coordination du déploiement et des travaux relatifs aux antennes
-              téléphoniques.
-            </li>
-            <li>
+              Assistance au marché de maintenance énergétique, marché de relève des compteurs, marché de déploiement des antennes téléphoniques 
               Gestion technique et administrative des marchés de diagnostic
               amiante et de la télérelève des compteurs d'eau.
             </li>
-            <li>Assistance administrative du service.</li>
+            <li>Gestion administrative du service.</li>
           </ul>
           <time class="travail-time">2020</time>
           <div class="hr-parent"><hr /></div>
@@ -158,16 +142,8 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
             >
           </p>
           <ul class="travail-prose">
-            <li>Gestion locative de 650 logements HLM.</li>
-            <li>États des lieux, suivi technique et réglementaire.</li>
-            <li>
-              Chiffrage, planification et suivi des chantiers de remise en état
-              des logements.
-            </li>
-            <li>
-              Coordination de la gestion des parties communes et lien avec les
-              syndics de copropriété.
-            </li>
+            <li>Responsable de la gestion locative de 650 logements HLM.</li>
+            <li>Chiffrage, planification et suivi des chantiers de remise en état des logements.</li>
           </ul>
           <time class="travail-time">2019-2020</time>
           <div class="hr-parent"><hr /></div>
@@ -182,13 +158,9 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
           </p>
           <ul class="travail-prose">
             <li>Gestion locative d’une résidence sociale de 160 logements.</li>
-            <li>États des lieux.</li>
-            <li>Réduction des impayés.</li>
-            <li>Coordination de la gestion technique.</li>
-            <li>
-              Accompagnement social. Accueil. Création de partenariats avec les
-              associations du secteur.
-            </li>
+            <li>Réduction des impayés, optimisation de la mise en location des logements</li>
+            <li>Management d'une équipe de nettoyage et de maintenance</li>
+            <li>Collaboration avec les services sociaux et accompagnement social des résidents</li>
           </ul>
           <time class="travail-time">2017-2019</time>
           <div class="hr-parent"><hr /></div>
@@ -206,11 +178,9 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
               Appui à la gestion locative d’une résidence sociale de 135
               logements.
             </li>
-            <li>États des lieux.</li>
-            <li>Réduction des impayés.</li>
-            <li>Coordination de la gestion technique.</li>
-            <li>Accompagnement social</li>
+            <li>Réduction des impayés, optimisation de la mise en location des logements, actions de développement commercial</li>
             <li>Mise en conformité RGPD.</li>
+            <li>Appui à la coordination d'un agent de nettoyage et d'un agent de maintenance</li>
           </ul>
         </section>
         <section class="scolaire-titre">
