--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -6,12 +6,15 @@ layout: projetlayout.html
 <div id="project-img-wrapper">
     <a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" alt="capture of the hompage of the newsletter subscription website"></a>
 </div>
-<h3>Détails du projet</h3>
+<h3>Rôle</h3>
+<p>Développeur et designer du projet</p>
+
+<h3>Commande / Objectifs</h3>
 <p>Site d'inscription à une newsletter consacrée au web-design. Envoi d'un mail de bienvenue à l'inscription. Chaque mois, une édition de la newsletter est envoyée via une tâche automatisée. Les mails envoyés peuvent-être lus dans le client mail ou dans le navigateur. Il est possible de se désinscrire de la newsletter à tout moment.</p>
 <div id="project-img-wrapper">
     <video controls muted src="../../img/newsletter-full.mp4" aria-label="showcase of the functionalities of the newsletter website"></video>
 </div>
-<h3>Stack</h3>
+<h3>Technologies utilisées</h3>
 <ul>
     <li>Base de données SQLite et requêtes SQL</li>
     <li>Express</li>
