modif(desktop nav homepage now position fixed) && style(homepage-projets-tags & btns)

--- a/src/index.html
+++ b/src/index.html
@@ -46,15 +46,15 @@ title: Management de projet, conduite du changement et numérique à Nantes
                   src="/img/bookshelf_mini.png"
                   alt="Miniature de mon site web fullstack The Bookshelf"
                 />
-                <button tabindex="-1">
+                <button class="homepage-projets-btn" tabindex="-1">
                   <a href="/projets/projetbookshelf/">Découvrir </a>
                 </button>
               </div>
               <div class="homepage-projets-grid-item__right">
                 <ul>
-                  <li>Vite</li>
-                  <li>Fastify</li>
-                  <li>SQLite</li>
+                  <li class="homepage-projets-tags">Vite</li>
+                  <li class="homepage-projets-tags">Fastify</li>
+                  <li class="homepage-projets-tags">SQLite</li>
                 </ul>
                 <div class="homepage-projets-grid-item__right__titleanddesc">
                   <h3>The Bookshelf - Web App</h3>
@@ -68,15 +68,15 @@ title: Management de projet, conduite du changement et numérique à Nantes
                   src="/img/feuillu_mini.png"
                   alt="Miniature de mon site web de newsletter"
                 />
-                <button tabindex="-1" >
+                <button class="homepage-projets-btn" tabindex="-1" >
                   <a href="/projets/projetnewsletter/">Découvrir </a>
                 </button>
               </div>
               <div class="homepage-projets-grid-item__right">
                 <ul>
-                  <li>Javascript</li>
-                  <li>Express</li>
-                  <li>SQLite</li>
+                  <li class="homepage-projets-tags">Javascript</li>
+                  <li class="homepage-projets-tags">Express</li>
+                  <li class="homepage-projets-tags">SQLite</li>
                 </ul>
                 <div class="homepage-projets-grid-item__right__titleanddesc">
                   <h3>Feuillu newsletter - Web App</h3>
@@ -104,7 +104,7 @@ title: Management de projet, conduite du changement et numérique à Nantes
           </ul>
         </nav>
       </header>
-      <footer class="anim-4 intersect" id="footer" role="contentinfo">
+      <footer class="homepage-footer anim-4 intersect" id="footer" role="contentinfo">
         {% include "footer.html"%}
       </footer>
     </div>
