refonte(homepage with photo & services-brief)

--- a/src/index.html
+++ b/src/index.html
@@ -28,28 +28,31 @@ title: Management de projet, conduite du changement et numérique à Nantes
         </nav>
       </header>
       <main id="homepage-hero">
-        <h1 class="anim-1 intersect">
-          Téotime Pacreau,<br />
-          Manage<wbr />ment de projet & Numérique
-        </h1>
-        <section id="homepage-prose">
-          <p class="anim-2 intersect">
-            Je suis apprenti en gestion de projet et conduite du changement pour
-            <a
-              tabindex="-1"
-              href="https://www.prefectures-regions.gouv.fr/pays-de-la-loire/Region-et-institutions/Organisation-administrative-de-la-region/Secretariat-General-pour-les-Affaires-Regionales-SGAR/Etat-LIN-le-Laboratoire-d-Innovation-Publique-de-l-Etat-en-region-Pays-de-la-Loire/Etat-LIN-qu-est-ce-que-c-est"
-              target="_blank"
-              rel="noopener noreferrer"
-              >État'LIN, le laboratoire d'innovation publique de l'État en Pays
-              de la Loire</a
-            >. J'étudie au sein du Master de Management,
-            Organisation et Conduite du Changement à Nantes.
-          </p>
-          <p class="intersect anim-3">
-            Impliqué professionnellement par les enjeux de transformation des
-            organisations.<br />
-            J'entame également un apprentissage personnel du développement web.
-          </p>
+        <div id="homepage-profil" class="anim-1 intersect">
+          <img src="/img/photo.png" alt="Photo de mon visage" height="50" width="50">
+          <h1>
+            Téotime Pacreau
+          </h1>
+        </div>
+
+        <section id="homepage-brief">
+          <h2 class="anim-2 intersect">
+            Du code léger pour des projets web maîtrisés
+          </h2>
+          <article class="services intersect anim-3">
+            <div>
+              <i class="ph ph-arrow-circle-right"></i>
+              <span>Conception de sites webs</span>
+            </div>
+            <div>
+              <i class="ph ph-arrow-circle-right"></i>
+              <span>Maintenance & refonte</span>
+            </div>
+            <div>
+              <i class="ph ph-arrow-circle-right"></i>
+              <span>Développement spécifique</span>
+            </div>
+          </article>
         </section>
         <section id="homepage-projets" class="intersect anim-3">
           <div id="homepage-projets-titre-flexer">
@@ -110,6 +113,6 @@ title: Management de projet, conduite du changement et numérique à Nantes
     </div>
     <script defer src="/scripts/colorTheme.js"></script>
     <script src="/scripts/nav.js"></script>
-    <script src="/scripts/animationHomepage.js"></script>
+    <script  src="/scripts/animationHomepage.js"></script>
   </body>
 </html>
