--- a/src/colophon.html
+++ b/src/colophon.html
@@ -11,13 +11,7 @@ title: Colophon of Teotime Pacreau website, how it is made with which technologi
     {% include "color-picker.html"%}
     <div class="container" id="normal-page-container">
       <header>
-        <button
-          class="mobile-nav-toggle"
-          aria-controls="primary-navigation"
-          aria-expanded="false"
-        >
-          <span class="sr-only">Menu</span>
-        </button>
+        {% include "menumobile.html"%}
         <nav
           class="navigation-flexer"
           id="primary-navigation"
@@ -76,7 +70,6 @@ title: Colophon of Teotime Pacreau website, how it is made with which technologi
       </main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
-    <script src="/scripts/colorTheme.js"></script>
-    <script src="/scripts/nav.js"></script>
+    {% include "loadscripts.html"%}
   </body>
 </html>
