--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -11,13 +11,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
     {% include "color-picker.html"%}
     <div class="container" id="normal-page-container">
       <header>
-        <button
-          class="mobile-nav-toggle"
-          aria-controls="primary-navigation"
-          aria-expanded="false"
-        >
-          <span class="sr-only">Menu</span>
-        </button>
+        {% include "menumobile.html"%}
         <nav
           class="navigation-flexer"
           id="primary-navigation"
@@ -356,8 +350,7 @@ title: Curriculum Vitae of Teotime Pacreau, work experiences, education, certifi
       </main>
       <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
     </div>
-    <script src="/scripts/colorTheme.js"></script>
-    <script src="/scripts/nav.js"></script>
-    <script src="/scripts/displayWorkExp.js"></script>
+    {% include "loadscripts.html"%}
+    <script defer src="/scripts/displayWorkExp.js"></script>
   </body>
 </html>
